--- a/src/planner/path_searching_ego_planner/CMakeLists.txt
+++ b/src/planner/path_searching_ego_planner/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(path_searching)
+project(path_searching_ego_planner)
 
 set(CMAKE_BUILD_TYPE "Release")
 ADD_COMPILE_OPTIONS(-std=c++11 )
@@ -21,7 +21,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 catkin_package(
  INCLUDE_DIRS include
- LIBRARIES path_searching
+ LIBRARIES path_searching_ego_planner
  CATKIN_DEPENDS plan_env
 #  DEPENDS system_lib
 )
@@ -34,9 +34,9 @@ include_directories(
     ${PCL_INCLUDE_DIRS}
 )
 
-add_library( path_searching 
+add_library( path_searching_ego_planner 
     src/dyn_a_star.cpp
     )
-target_link_libraries( path_searching
+target_link_libraries( path_searching_ego_planner
     ${catkin_LIBRARIES} 
     )  
