--- a/src/planner/path_searching_ego_planner/package.xml
+++ b/src/planner/path_searching_ego_planner/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>path_searching</name>
+  <name>path_searching_ego_planner</name>
   <version>0.0.0</version>
-  <description>The path_searching package</description>
+  <description>The path_searching_ego_planner package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
